# freetype2

./: meson.build
builds/: exports.mk
include/freetype/: freetype.h
include/freetype/internal/: ftobjs.h  tttypes.h
src/truetype/: ttinterp.c
subprojects/: bz2.wrap
